; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_ipc.c_mp_json_encode_event.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_ipc.c_mp_json_encode_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { i32* }

@MPV_FORMAT_NODE_MAP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mp_json_encode_event(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_6__, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %6 = call i8* @talloc_new(i32* null)
  store i8* %6, i8** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  store i32* null, i32** %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 1
  %10 = load i32, i32* @MPV_FORMAT_NODE_MAP, align 4
  store i32 %10, i32* %9, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @mpv_event_to_node(i8* %11, i32* %12, %struct.TYPE_6__* %4)
  %14 = call i8* @talloc_strdup(i32* null, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i8* %14, i8** %5, align 8
  %15 = call i32 @json_write(i8** %5, %struct.TYPE_6__* %4)
  %16 = load i8*, i8** %5, align 8
  %17 = call i8* @ta_talloc_strdup_append(i8* %16, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i8* %17, i8** %5, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = call i32 @talloc_free(i8* %18)
  %20 = load i8*, i8** %5, align 8
  ret i8* %20
}

declare dso_local i8* @talloc_new(i32*) #1

declare dso_local i32 @mpv_event_to_node(i8*, i32*, %struct.TYPE_6__*) #1

declare dso_local i8* @talloc_strdup(i32*, i8*) #1

declare dso_local i32 @json_write(i8**, %struct.TYPE_6__*) #1

declare dso_local i8* @ta_talloc_strdup_append(i8*, i8*) #1

declare dso_local i32 @talloc_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
